src/test/ui/closure-expected-type/expect-fn-supply-fn.base.stderr
error[E0308]: mismatched types
  --> $DIR/expect-fn-supply-fn.rs:20:52
   |
LL |     with_closure_expecting_fn_with_free_region(|x: fn(&'x u32), y| {});
   |                                                    ^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected fn pointer `fn(&u32)`
              found fn pointer `fn(&'x u32)`
note: the anonymous lifetime #1 defined here...
  --> $DIR/expect-fn-supply-fn.rs:20:48
   |
LL |     with_closure_expecting_fn_with_free_region(|x: fn(&'x u32), y| {});
   |                                                ^^^^^^^^^^^^^^^^^^^^^^
note: ...does not necessarily outlive the lifetime `'x` as defined here
  --> $DIR/expect-fn-supply-fn.rs:17:36
   |
LL | fn expect_free_supply_free_from_fn<'x>(x: &'x u32) {
   |                                    ^^

error[E0308]: mismatched types
  --> $DIR/expect-fn-supply-fn.rs:20:52
   |
LL |     with_closure_expecting_fn_with_free_region(|x: fn(&'x u32), y| {});
   |                                                    ^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected fn pointer `fn(&u32)`
              found fn pointer `fn(&'x u32)`
note: the lifetime `'x` as defined here...
  --> $DIR/expect-fn-supply-fn.rs:17:36
   |
LL | fn expect_free_supply_free_from_fn<'x>(x: &'x u32) {
   |                                    ^^
note: ...does not necessarily outlive the anonymous lifetime #1 defined here
  --> $DIR/expect-fn-supply-fn.rs:20:48
   |
LL |     with_closure_expecting_fn_with_free_region(|x: fn(&'x u32), y| {});
   |                                                ^^^^^^^^^^^^^^^^^^^^^^

error[E0631]: type mismatch in closure arguments
  --> $DIR/expect-fn-supply-fn.rs:36:5
   |
LL |     with_closure_expecting_fn_with_free_region(|x: fn(&u32), y| {});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ---------------- found signature of `fn(for<'r> fn(&'r u32), _) -> _`
   |     |
   |     expected signature of `for<'a, 'r> fn(for<'a> fn(&'a u32), &'r i32) -> _`
   |
note: required by a bound in `with_closure_expecting_fn_with_free_region`
  --> $DIR/expect-fn-supply-fn.rs:7:8
   |
LL | fn with_closure_expecting_fn_with_free_region<F>(_: F)
   |    ------------------------------------------ required by a bound in this
LL | where
LL |     F: for<'a> FnOnce(fn(&'a u32), &i32),
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `with_closure_expecting_fn_with_free_region`

error[E0631]: type mismatch in closure arguments
  --> $DIR/expect-fn-supply-fn.rs:43:5
   |
LL |     with_closure_expecting_fn_with_bound_region(|x: fn(&'x u32), y| {});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ------------------- found signature of `fn(fn(&'x u32), _) -> _`
   |     |
   |     expected signature of `for<'r> fn(for<'s> fn(&'s u32), &'r i32) -> _`
   |
note: required by a bound in `with_closure_expecting_fn_with_bound_region`
  --> $DIR/expect-fn-supply-fn.rs:13:8
   |
LL | fn with_closure_expecting_fn_with_bound_region<F>(_: F)
   |    ------------------------------------------- required by a bound in this
LL | where
LL |     F: FnOnce(fn(&u32), &i32),
   |        ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `with_closure_expecting_fn_with_bound_region`

error[E0631]: type mismatch in closure arguments
  --> $DIR/expect-fn-supply-fn.rs:52:5
   |
LL |     with_closure_expecting_fn_with_bound_region(|x: Foo<'_>, y| {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ --------------- found signature of `for<'r> fn(for<'r> fn(&'r u32), _) -> _`
   |     |
   |     expected signature of `for<'r> fn(for<'s> fn(&'s u32), &'r i32) -> _`
   |
note: required by a bound in `with_closure_expecting_fn_with_bound_region`
  --> $DIR/expect-fn-supply-fn.rs:13:8
   |
LL | fn with_closure_expecting_fn_with_bound_region<F>(_: F)
   |    ------------------------------------------- required by a bound in this
LL | where
LL |     F: FnOnce(fn(&u32), &i32),
   |        ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `with_closure_expecting_fn_with_bound_region`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0631.
For more information about an error, try `rustc --explain E0308`.
